# rtls

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  dev-requirements.txt  noxfile.py  pyproject.toml
.github/workflows/: CI.yml
rust/: Cargo.toml  build.rs
rust/src/: cert.rs  config.rs  connection.rs  error.rs  lib.rs  verify.rs
src/rtls/: __init__.py  _bio.py  _certificate.py  _ciphers.py  _constants.py  _context.py  _exceptions.py  _object.py  _rustls.pyi  _socket.py  _utils.py
tests/: test_cpython_ssl.py  test_rtls.py
tests/certdata/: intermediate_cert.pem  intermediate_cert.srl  intermediate_csr.pem  intermediate_key.pem  keycert_leaf.pem  leaf_cert.pem  leaf_chain.pem  leaf_csr.pem  leaf_key.pem  root_cert.pem  root_cert.srl  root_key.pem
